<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">SimpleTimer</string>
    <string name="copyright">Copyright © 2013&#8211;2015 YA</string>
    <string name="default_time">0:01:00</string>
    <string name="default_time_summary">hh:mm:ss (ex. 0:01:00)</string>
    <string name="default_time_title">Default Time</string>
    <string name="elapsed">経過</string>
    <string name="finish">Finish</string>
    <string name="left">残り</string>
    <string name="pose">Pose</string>
    <string name="reset">Reset</string>
    <string name="ringtonepref_title">Select Alarm Sound</string>
    <string name="settings">Settings</string>
    <string name="speech_second">1,2,3,10,60,120</string>
    <string name="speech_second_summary">カンマ区切り (ex. 1,2,3,10,60,120)</string>
    <string name="speech_second_title">残り時間読み上げタイミング</string>
    <string name="start">Start</string>
    <string name="tts_elapsed">経過時間読み上げ</string>
    <string name="tts_left">残り時間読み上げ</string>

</resources> <!-- Copyright (c) 2013-2015 YA <ya.androidapp@gmail.com> All rights reserved. -->
